app/src/ui/screens/MainScreen/MainScreen.css
.main-screen {
    --sidebar-width: auto;
    --sidebar-height: auto;

    @apply w-full h-full flex flex-col gap-2;

    min-height: 100svh;

    padding: 0 calc(var(--spacing) * 2) env(safe-area-inset-bottom, 0)
        calc(var(--spacing) * 2);

    @media (min-width: 1024px) {
        --sidebar-width: 300px;
        --sidebar-height: calc(100dvh - var(--spacing) * 4);
        @apply flex-row;

        padding: env(safe-area-inset-top, 0) calc(var(--spacing) * 4)
            env(safe-area-inset-bottom, 0) calc(var(--spacing) * 4);
    }

    @media (min-width: 1680px) {
        --sidebar-width: 320px;
    }

    @media (min-width: 2100px) {
        --sidebar-width: 380px;
    }

    .subscreen {
        @apply flex-1;
        order: 2;

        @media (min-width: 1440px) {
            order: 1;
        }

        @media (min-width: 1680px) {
            padding: 0 calc(var(--sidebar-width) + var(--spacing) * 4);
        }
    }
}

.main-screen .memo-list-screen {
    @apply flex-1;
    display: contents;

    .memo-list-container {
        @apply flex-1;
        order: 2;
        @media (min-width: 1024px) {
            order: 1;
        }

        @media (min-width: 1680px) {
            padding-right: calc(var(--sidebar-width) + var(--spacing) * 4);
        }
    }
}

.main-screen {
    .memo-list-filter {
        padding-top: env(safe-area-inset-top, 2rem);
        max-width: var(--sidebar-width);
        width: var(--sidebar-width);
        height: var(--sidebar-height);

        @media (min-width: 1024px) {
            order: 2;
        }

        /* md */
        @media (min-width: 1680px) {
            position: fixed;
        }
    }

    &.has-subscreen .memo-list-filter {
        display: none;
        @media (min-width: 1680px) {
            display: flex;
        }
    }
}

.main-screen.has-subscreen {
    .memo-list-screen {
        display: none;
        @media (min-width: 1024px) {
            display: contents;
        }

        .memo-list-filter {
            order: 3;
        }

        .memo-list-container {
            @apply flex-1;
            order: 2;
            max-width: var(--sidebar-width);
            height: var(--sidebar-height);
            overflow: auto;
            position: sticky;
            top: env(safe-area-inset-top, 0);
            @media (min-width: 1680px) {
                order: 1;
                position: fixed;
                width: var(--sidebar-width);
                padding-right: 0;
            }
        }

        .memo-list-header {
            display: none;
        }

        .new-memo-editor {
            display: none;
        }

        .memo-list {
            @media (min-width: 1024px) {
                .memo-list-day-group:nth-of-type(2) {
                    .memo-list-day {
                        margin-top: var(--appbar-height);
                    }
                }
            }

            .memo-list-layout-select-positioner {
                display: none;
            }

            .memo-list-day {
                @apply text-base;
            }

            .memo-list-memos {
                display: flex;
                flex-flow: row wrap;
                gap: 0.5rem;
                align-content: space-between;
            }

            .memo {
                @apply overflow-hidden h-fit;
                width: calc(100%);
            }

            .memo:has(.memo-header h1) .markdown * {
                display: none;
            }

            .memo:has(.memo-header h1) .markdown p:has(.tag-link) {
                display: block;

                a {
                    display: inline;
                }
            }

            .link-preview {
                float: none;
                max-width: 100%;
            }
        }
    }
}

.main-screen.has-subscreen {
    .single-memo-screen {
        @media (min-width: 1024px) {
            margin-top: calc(-1 * var(--appbar-height));
        }
    }
}

